# RogueLikeGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  imgui.ini  run.bat  vcpkg.json
include/: vk_utils.h
src/: main.cpp
src/app/: Assets.cpp  Assets.h  Device.cpp  GameSetup.cpp  GameSetup.h  ImGuiInit.cpp  Instance.cpp  Swapchain.cpp  SyncAndDescriptors.cpp  Texture.cpp  VulkanImGuiApp.cpp  VulkanImGuiApp.h  Window.cpp  game.cpp  game.h
tools/: detect_json_dups.py
